--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,25 @@ body {
   gap: 8px;
 }
 
+.logo-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  background-color: white;
+  border-radius: 8px; 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
 .logo {
   height: 32px;
+  width: auto;
 }
 
 .brand-name {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 600;
   color: #111827;
 }
@@ -88,6 +101,8 @@ body {
 .dropdown-section {
   padding: 12px 16px;
   border-bottom: 1px solid #E5E7EB;
+  display: flex;
+  justify-content: space-between;
 }
 
 .dropdown-section:last-child {
@@ -203,7 +218,7 @@ body {
 }
 
 .mobile-menu-content {
-  padding: 64px 20px 20px 20px;
+  padding: 90px 20px 20px 20px;
   opacity: 0;
   transform: translateY(20px);
   transition: all 0.3s ease-in-out;
@@ -342,6 +357,7 @@ body {
     font-size: 18px;
     color: #6B7280;
     margin-bottom: 32px;
+    padding-top: 15px;
   }
 
 .search-bar {
@@ -353,7 +369,7 @@ body {
   right: 90%;
   top: 50px;
   background: white;
-  padding: 24px;
+  padding: 15px;
   border-radius: 12px;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
@@ -460,11 +476,11 @@ body {
 
 
 .image-column.left {
-  animation: slideDown 15s linear infinite;
+  animation: slideUp 15s linear infinite;
 }
 
 .image-column.right {
-  animation: slideUp 15s linear infinite;
+  animation: slideDown 15s linear infinite;
 }
 
 @keyframes slideDown {
@@ -560,7 +576,7 @@ body {
 
 .pillars-tabs button {
   padding: 8px 16px;
-  border: none;
+  border: 1px solid #D2D2D2;
   background: transparent;
   color: #6B7280;
   cursor: pointer;
@@ -596,7 +612,6 @@ body {
   font-size: 24px;
   color: #707070;
   font-weight: 500;
-  font-style: italic;
 }
 
 .navigation {
@@ -612,7 +627,7 @@ body {
   border-radius: 50%;
   margin-left: 8px;
   cursor: pointer;
-  display: block;
+  display: flex;
 }
 
 .navigation button:disabled {
@@ -639,9 +654,16 @@ body {
 .pillar-card {
   flex: 0 0 calc(100% / 2.5);
   position: relative;
+  border: 1px solid #eee;
   border-radius: 8px;
   overflow: hidden;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px, rgba(0, 0, 0, 0.05) 0px 0.5px 1px;
+  transition: all .3s ease-in-out;
+}
+
+.pillar-card:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px, rgba(0, 0, 0, 0.18) 0px 4px 11px;
+  transform: translate3d(0px, -1px, 0px);
 }
 
 .pillar-card img {
@@ -741,6 +763,7 @@ body {
   .pillar-card {
     height: 100%;
     padding-bottom: 15px;
+    flex-basis: calc(80% / 2.5);
   }
   
   .hero-images {
@@ -816,6 +839,7 @@ body {
     gap: 16px;
     flex-shrink: 0;
   }
+
 
   .image-set img {
     width: 280px;
